Archive2/18/119a57aa765be3/output
main.cpp:7:17: error: default initialization of an object of const type 'const A' without a user-provided default constructor
    constexpr A a;
                ^
main.cpp:7:18: note: add an explicit initializer to initialize 'a'
    constexpr A a;
                 ^
                 {}
1 error generated.
