Archive2/18/119a57aa765be3/main.cpp
struct A {
    int i = 0;
};

int main()
{
    constexpr A a;
}
